Fake: clean up duplicate position parsing logic